<resources>
    <string name="app_name">DarkCanary</string>
    <string name="please_permission">App can only function properly with location permissions</string>
    <string name="grant">Give Permission</string>
    <string name="high_temp">High Temperature</string>
    <string name="low_temp">Low Temperature</string>
    <string name="na">N/A</string>
    <string name="view_details">View Details</string>
    <string name="seven_days">Your 7 Day Forecast</string>
    <string name="forecast_database">forecast_room_database</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Dark Canary. All the weather minus the distractions</string>
    <string name="pecip_probability">Preceipitation Probability</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="precip_intensity">Precipitation Intensity</string>
    <string name="humidity">Humidity</string>

    <string name="temperature">Temperature</string>
    <string name="uv_index">UV Index</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_bearing">Wind Bearing</string>
    <string name="pressure">Pressure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
