<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_cultured"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_number"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery"/>
    </group>

    <item android:title="Portfolio">
        <menu>
            <item
                    android:id="@+id/nav_github"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
        </menu>
    </item>

</menu>
