<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".forecast.ForecastFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <TextView
                android:id="@+id/date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven_days"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="@dimen/title_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
                android:id="@+id/icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@+id/date_title"
                app:layout_constraintBottom_toTopOf="@+id/summary_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_wi_cloudy_100" app:layout_constraintHorizontal_bias="0.498"/>

        <TextView
                android:id="@+id/summary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/date_title"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintBottom_toTopOf="@+id/high_temp_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Partly cloudy with sunshine" app:layout_constraintVertical_bias="0.666"/>

        <TextView
                android:id="@+id/high_temp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/high_temp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintTop_toBottomOf="@+id/date_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintVertical_bias="0.30"/>

        <TextView
                android:id="@+id/high_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/na"
                android:textSize="@dimen/big_temp_size"
                app:layout_constraintTop_toBottomOf="@+id/high_temp_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/low_temp_title"
                android:gravity="center"
                app:layout_constraintVertical_bias="0.30"/>

        <TextView
                android:id="@+id/low_temp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/low_temp"
                app:layout_constraintTop_toBottomOf="@+id/high_temp_title"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.352" android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/low_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/na"
                android:textSize="@dimen/big_temp_size"
                app:layout_constraintTop_toBottomOf="@+id/low_temp_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintVertical_bias="0.30"
                app:layout_constraintBottom_toTopOf="@+id/details_button"/>

        <Button
                android:id="@+id/details_button"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/view_details"
                android:gravity="center"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AppTheme.RoundedCornerMaterialButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/progress_spinner"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>